fixed main body text overlapping with footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 main{
   margin-inline: 10%;
   margin-block: 5%;
+  margin-bottom: 10%;
 }
 
 p{
